--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -7,13 +7,23 @@
       <button class="leave-btn">Leave room</button>
     </div>
 
+    <!-- mobile header -->
+    <div class="chat-header-mobile">
+      <h1 class="chat-heading">ChatX</h1>
+      <button class="menu-btn">Menu</button>
+      <button class="close-btn">Close</button>
+    </div>
+
     <div class="chat-section">
 
       <div class="sidebar">
         <div class="sidebar-container">
           <div class="room-section">
-            <h2>Room Name</h2>
+            <div class="room-sec">
+              <h2>Room Name</h2>
             <p class="room-name"></p>
+            </div>
+            
           </div>
 
           <div class="user-section">
@@ -31,7 +41,7 @@
 
       <div class="chat-window">
         <div class="chat-messages">
-          
+
         </div>
 
         <div class="chat-form">
