--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="author" content="Xemicolon">
+    <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86">
+    <meta charset="UTF-8">
     <title><%= title %></title>
     <link rel='stylesheet' href='../stylesheets/style.css' />
   </head>
