--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="author" content="Xemicolon">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title><%= title %></title>
     <link rel='stylesheet' href='../stylesheets/style.css' />
   </head>
